--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a onclick="loadData()" style="color:#5D5FEF;" class="nav-link active fw-bold"
-                            aria-current="page" href="#">News</a>
+                        <a style="color:#5D5FEF;" class="nav-link active fw-bold" aria-current="page" href="#">News</a>
                     </li>
                     <li class="nav-item ms-4 ">
                         <a class="nav-link active text-muted fw-bold" aria-current="page" href="#">Blog</a>
@@ -36,18 +35,24 @@
             </div>
         </nav>
         <hr>
-
-
     </header>
 
     <main>
-        <section class="container">
+        <section class="container mt-2">
             <div id="all-news-div">
                 <ul id="all-news-ul" style="display: flex;
                 justify-content:space-around;
                 list-style-type:none;">
-                    <!-- <li class="all-news-li"><a href="" class="all-news-anchor text-muted fw-bold" style="text-decoration: none;"> Inbox</a></li> -->
+
                 </ul>
+            </div>
+        </section>
+
+        <section class="container mt-4">
+            <div class="card-group">
+                <div id="news-container" class="card mb-5">
+
+                </div>
             </div>
         </section>
     </main>
